# python-web-frameworks

./: Justfile  compose.yaml  pyproject.toml
.github/workflows/: tests.yml
app/api/: dependencies.py  utils.py
app/api/django/: dependencies.py  handlers.py  middlewares.py  types.py  urls.py
app/api/django/items/: routes.py
app/api/fastapi/: app.py  dependencies.py  exceptions.py  lifespan.py  utils.py
app/api/fastapi/dev/: router.py
app/api/fastapi/items/: router.py
app/api/flask/: app.py  dependencies.py  exceptions.py  utils.py
app/api/flask/dev/: router.py
app/api/flask/items/: router.py
app/core/: fastapi.py  flask.py  settings.py
app/core/django/: app.py  context.py
app/core/sqlalchemy/: context.py
app/domain/: context.py  entities.py
app/domain/dev/: commands.py
app/domain/items/: commands.py  entities.py  repository.py
app/infrastructure/django/: apps.py  items.py
app/infrastructure/django/models/: __init__.py  items.py
app/infrastructure/sqlalchemy/: items.py  logger.py  utils.py
app/infrastructure/sqlalchemy/models/: base.py  items.py
tests/: conftest.py  logger.py
tests/api/: conftest.py
tests/api/clients/: base.py  django.py  flask.py
tests/api/items/: test_create_item.py  test_delete_item.py  test_get_item.py  test_get_items.py  test_items_special.py  test_update_item.py
tests/factories/: items.py  utils.py
tests/plugins/: database.py  factories.py
